[project]
name = "pymongo-util"
version = "0.1.0"
description = "PyMongo Util is a utility package that simplifies interaction with MongoDB using PyMongo."
readme = "README.md"
authors = [
    { name = "Faizan Azim", email = "faizanazim11@gmail.com" },
    { name = "Irfanuddin Shafi Ahmed", email = "irfanuddinshafi@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "pymongo>=4.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mongomock>=4.3.0", "pre-commit>=4.0.1", "pytest>=8.3.4", "ruff>=0.8.3"]
